Add precompiled assets and secret file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@
 /log/*
 !/log/.keep
 /tmp
+
+# Ignore environment variables.
+/config/app_environment_variables.rb
+
+# Ignore precompiled assets.
+/public/assets
