--- a/test/fixtures/rest_registers.yml
+++ b/test/fixtures/rest_registers.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id_id: 
+  user_id: 
   email: MyString
   name: MyString
-  cat: MyString
-  subcat: MyString
+  category_id: 
+  subcategory_id: 
   addr: MyString
   phnum: MyString
   delivery: false
@@ -13,11 +13,11 @@ one:
   etc: MyText
 
 two:
-  user_id_id: 
+  user_id: 
   email: MyString
   name: MyString
-  cat: MyString
-  subcat: MyString
+  category_id: 
+  subcategory_id: 
   addr: MyString
   phnum: MyString
   delivery: false
