--- a/test/fixtures/addrcompletes.yml
+++ b/test/fixtures/addrcompletes.yml
@@ -1,7 +1,5 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
-  name: MyString
+  name: addr1
 
 two:
-  name: MyString
+  name: addr2
