--- a/test/fixtures/notices.yml
+++ b/test/fixtures/notices.yml
@@ -1,9 +1,7 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
-  question: MyString
-  answer: MyString
+  question: notice1
+  answer: answer1
 
 two:
-  question: MyString
-  answer: MyString
+  question: notice2
+  answer: answer2
