--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -1,11 +1,9 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
   user_id: 1
-  email: MyString
-  contents: MyText
+  email: 
+  contents: contents1
 
 two:
-  user_id: 1
-  email: MyString
-  contents: MyText
+  user_id: 
+  email: email_on_2
+  contents: contents2
