--- a/config/database.yml
+++ b/config/database.yml
@@ -20,9 +20,14 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  # database: new_MenuMap_test
-  database: <%= ENV['RDS_DB_NAME'] %>
+  adapter: mysql2
+  encoding: utf8
+  pool: 5
+  username: root
+  password: 
+  # Jeongbin's Ubuntu 14.04
+  socket: /var/run/mysqld/mysqld.sock
+  database: new_MenuMap_test
 
 # Instead, provide the password as a unix environment variable when you boot
 # the app. Read http://guides.rubyonrails.org/configuring.html#configuring-a-database
