--- a/test/fixtures/rest_infos.yml
+++ b/test/fixtures/rest_infos.yml
@@ -1,11 +1,13 @@
-one:
+rest_info1:
+  id: 1
   restaurant_id: 1
   owner_intro: "owner 1"
   naver_lat: 35.99
   naver_lng: 125.99
   active: true
 
-two:
+rest_info2:
+  id: 2
   restaurant_id: 2
   owner_intro: "owner 2"
   naver_lat: 34.99
