--- a/test/fixtures/notices.yml
+++ b/test/fixtures/notices.yml
@@ -1,7 +1,7 @@
-one:
-  question: notice1
+notice1:
+  question: question1 
   answer: answer1
 
-two:
-  question: notice2
+notice2:
+  question: question2 
   answer: answer2
