--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -1,9 +1,9 @@
-one:
+question1:
   user_id: 1
   email: 
   contents: contents1
 
-two:
+question2:
   user_id: 
   email: email_on_2
   contents: contents2
