--- a/test/fixtures/rest_errs.yml
+++ b/test/fixtures/rest_errs.yml
@@ -1,4 +1,4 @@
-one:
+rest_err1:
   restaurant_id: 1
   user_id: 
   presence_err: false
@@ -8,7 +8,7 @@ one:
   etc: "error is good"
   active: true
 
-two:
+rest_err2:
   restaurant_id: 2
   user_id: 1
   presence_err: true
