--- a/test/fixtures/rest_registers.yml
+++ b/test/fixtures/rest_registers.yml
@@ -1,7 +1,7 @@
-one:
+register1:
   user_id: 1
   email: 
-  name: register1
+  name: register_name1
   category_id: 1
   subcategory_id: 1
   addr: addr1
@@ -10,10 +10,10 @@ one:
   open_at: clsed
   etc: 
 
-two:
+register2:
   user_id: 
   email: 
-  name: register2
+  name: register_name2
   category_id: 1
   subcategory_id: 2
   addr: addr2k
