--- a/test/fixtures/addr_rules.yml
+++ b/test/fixtures/addr_rules.yml
@@ -1,11 +1,9 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
+addr_rule1:
   user_id: 
-  name: MyString
-  active: false
+  name: addr_rule1
+  active: true
 
-two:
+addr_rule2:
   user_id: 
-  name: MyString
-  active: false
+  name: addr_rule2
+  active: true
