--- a/test/fixtures/addr_conversions.yml
+++ b/test/fixtures/addr_conversions.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  address_id: 
+addr_conversion1:
+  address_id: 11000000000
   convert_to: MyString
   convert_from: MyString
 
-two:
+addr_conversion2:
   address_id: 
   convert_to: MyString
   convert_from: MyString
