--- a/test/fixtures/menus.yml
+++ b/test/fixtures/menus.yml
@@ -1,21 +1,21 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  menu_title_id: 
+menu1:
+  menu_title_id: 1
   user_id: 
-  name: MyString
+  name: menu1
   side_info: MyString
   price: 1
   info: MyString
   sitga: false
-  active: false
+  active: true
 
-two:
-  menu_title_id: 
-  user_id: 
-  name: MyString
+menu2:
+  menu_title_id: 2
+  user_id: 1
+  name: menu2
   side_info: MyString
   price: 1
   info: MyString
   sitga: false
-  active: false
+  active: true
