Remove unnecessary links from header

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,9 @@
 /app/assets/images
 /public/images
 
-# Seed data
+# Seed data and csv parsing file.
 /db/seed_data
+/lib/tasks/csv.rake
 
 # Different OS has different local path to mysql
 /config/database.yml
